--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,39 @@
     padding: 0;
     box-sizing: border-box;
 }
+// GENERAL STYLES
+body {
+    font-family: "Work Sans" , sans-serif;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+.btn {
+    background: black;
+    padding: 8px 16px;
+    border-radius: 20px;
+    color: white;
+
+}
+
+// HEADER
+header {
+    display: flex;
+    padding: 20px;
+    justify-content: space-between;
+    border-bottom: 1px solid black;
+    align-items: center;
+
+    .logo {
+        height: 30px;
+    }
+}
+
+@media screen and (max-width:720px) {
+    .sm-hidden {
+        display: none;
+    }
+}
+    
+
